--- a/calculator.html
+++ b/calculator.html
@@ -1,22 +1,34 @@
 
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title>Calculator</title>
     <script type="text/javascript">
-      function cube(){
+      function cuarta(){
         var num=document.getElementById("n1");
-        num.value=Math.pow(num.value,3);
+        num.value=Math.pow(num.value,4);
         }
-    </script>>
+
+
+    </script>
+    <script type="text/javascript">
+    function cube(){
+    var num=document.getElementById("n1");
+      num.value=Math.pow(num.value,3);
+      }
+
+    </script>
   </head>
   <body>
     <h1>Calculadora de Stinely Giselle Mendez Reyes</h1>
     Number:
+    </p>
     <input type="text" id="n1">
     <p>
+
       <button onclick="cube()"> x^3 </button>
+      <button onclick="cuarta()"> x^4 </button>
     </p>
   </body>
-</html>>
+</html>
