--- a/calculator.html
+++ b/calculator.html
@@ -9,15 +9,18 @@
         var num=document.getElementById("n1");
         num.value=Math.pow(num.value,4);
         }
-
-
     </script>
     <script type="text/javascript">
     function cube(){
     var num=document.getElementById("n1");
       num.value=Math.pow(num.value,3);
       }
-
+    </script>
+    <script type="text/javascript">
+    function sine(){
+    var num=document.getElementById("n1");
+      num.value=Math.sin(num.value);
+      }
     </script>
   </head>
   <body>
@@ -29,6 +32,7 @@
 
       <button onclick="cube()"> x^3 </button>
       <button onclick="cuarta()"> x^4 </button>
+      <button onclick="sine()"> sin(x) </button>
     </p>
   </body>
 </html>
